# pa-applet

./: configure.ac
src/: Makefile.am  main.c  popsound.c
